Horizontal scroll fixed

--- a/src/components/UI/background/BackgroundImage.module.scss
+++ b/src/components/UI/background/BackgroundImage.module.scss
@@ -3,6 +3,7 @@
   // position: fixed;
   transform: scale(-1, 1);
   width: 100vw;
+  max-width: 100%;
   opacity: 0.6;
   top: 0;
   z-index: -1;
